--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -1,9 +1,6 @@
 @import "css/mixins";
 
-
-
 #home {
-
   #siteSummary {
     margin-bottom: 20px;
     padding: 0px 30px;
@@ -24,86 +21,73 @@
     margin-top: 40px;
     text-align: center;
   }
-  
-  
-  
-#flowChartTitleDiv{
-   
-	position:absolute;
-	margin-left:140px;
-	margin-top:-45px;
-	text-align:center;
-	width:400px;
-	font-size:1.6em;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
 
-#fullFlow{
-margin-top:60px;
-	width:800px;
-	height: 600px;
+  #flowChartTitleDiv {
+    position: absolute;
+    margin-left: 140px;
+    margin-top: -45px;
+    text-align: center;
+    width: 400px;
+    font-size: 1.6em;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  }
 
-}
-#videoHeading{
-width:100%;
-height:20px;
-background-color:$red;
-padding:5px;
+  #fullFlow {
+    margin-top: 60px;
+    width: 800px;
+    height: 600px;
+  }
 
+  #videoHeading {
+    width: 100%;
+    height: 20px;
+    background-color: $red;
+    padding: 5px;
+  }
 
-}
-.FlowChartMain{
- 	
-}
+  a.whiteHighlight{
+    &:hover {
+      color: white;
+      opacity: 1;
+    }
 
-a.whiteHighlight{
-&:hover { color: white; opacity:1;}
-float:right;
-opacity:.6;
+    float: right;
+    opacity: 0.6;
+  }
 
-}
-  
-.Tiers{
-	position:absolute;
-	display:none;
-}
-  
-.Tier1{
-	position:absolute;
+  .Tiers {
+    position: absolute;
+    display: none;
+  }
 
-}
-  
-.subFlowChart{
-  	position:absolute;
-	width:800px;
-	height:600px;
-	margin-left:-70px;
+  .Tier1 {
+    position: absolute;
+  }
 
-}
-.subFlowChartFork{
-  	position:absolute;
-	width:800px;
-	height:600px;
-	margin-left:-70px;
-	cursor:pointer;
+  .subFlowChart {
+    position: absolute;
+    width: 800px;
+    height: 600px;
+    margin-left: -70px;
+  }
 
-}
-  		
-.subFlowChartEnd{
-  	position:absolute;
-	width:800px;
-	height:600px;
-	margin-left:-70px;
-	cursor:pointer;
+  .subFlowChartFork {
+    position: absolute;
+    width: 800px;
+    height: 600px;
+    margin-left: -70px;
+    cursor: pointer;
+  }
 
-}
-  	
-  	
-  	
-  
-  
+  .subFlowChartEnd {
+    position: absolute;
+    width: 800px;
+    height: 600px;
+    margin-left: -70px;
+    cursor: pointer;
+  }
+
   #adGrid {
-  
     margin: 20px auto;
 
     table {
